--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Regular.woff") format("woff");
+  src: url("assets/fonts/TTLakes-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Medium.woff") format("woff");
+  src: url("assets/fonts/TTLakes-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Bold.woff") format("woff");
+  src: url("assets/fonts/TTLakes-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -83,7 +83,7 @@ main {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-image: url(/public/assets/icons/repair.svg);
+  background-image: url(assets/icons/repair.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -92,7 +92,7 @@ main {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-image: url(/public/assets/icons/checkstatus.svg);
+  background-image: url(assets/icons/checkstatus.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -211,7 +211,7 @@ main {
   letter-spacing: -0.2px;
 }
 .about-us__button::before {
-  content: url(/public/assets/icons/expand.svg);
+  content: url(assets/icons/expand.svg);
   vertical-align: middle;
   margin-right: 8px;
   margin-left: 10px;
@@ -260,7 +260,7 @@ main {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url(/public/assets/icons/call.svg);
+    background-image: url(assets/icons/call.svg);
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -272,7 +272,7 @@ main {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url(/public/assets/icons/message.svg);
+    background-image: url(assets/icons/message.svg);
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -284,7 +284,7 @@ main {
     height: 40px;
     border-radius: 50%;
     background-color: #FF3E79;
-    background-image: url(/public/assets/icons/profile.svg);
+    background-image: url(assets/icons/profile.svg);
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
