--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Regular.woff") format("woff");
+  src: url("/assets/fonts/TTLakes-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Medium.woff") format("woff");
+  src: url("/assets/fonts/TTLakes-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("../assets/fonts/TTLakes-Bold.woff") format("woff");
+  src: url("/assets/fonts/TTLakes-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
